// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse should parse "" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse ":! FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
}
`;

exports[`parse should parse ":@ FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
}
`;

exports[`parse should parse ":nick FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
  "prefix": Object {
    "name": "nick",
  },
}
`;

exports[`parse should parse ":nick!user FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
  "prefix": Object {
    "name": "nick",
    "user": "user",
  },
}
`;

exports[`parse should parse ":nick!user@host FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
  "prefix": Object {
    "host": "host",
    "name": "nick",
    "user": "user",
  },
}
`;

exports[`parse should parse ":nick@host FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
  "prefix": Object {
    "host": "host",
    "name": "nick",
  },
}
`;

exports[`parse should parse ":se.rv.er FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
  "prefix": Object {
    "name": "se.rv.er",
  },
}
`;

exports[`parse should parse ":test     PRIVMSG    foo     :bar" 1`] = `
Object {
  "command": "PRIVMSG",
  "params": Array [
    "foo",
    "bar",
  ],
  "prefix": Object {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test " 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse ":test FOO     " 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
  "prefix": Object {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test FOO bar baz quux" 1`] = `
Object {
  "command": "FOO",
  "params": Array [
    "bar",
    "baz",
    "quux",
  ],
  "prefix": Object {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
  "prefix": Object {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test PRIVMSG #fo:oo :This is a test" 1`] = `
Object {
  "command": "PRIVMSG",
  "params": Array [
    "#fo:oo",
    "This is a test",
  ],
  "prefix": Object {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test PRIVMSG foo :A string   with spaces   " 1`] = `
Object {
  "command": "PRIVMSG",
  "params": Array [
    "foo",
    "A string   with spaces   ",
  ],
  "prefix": Object {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test!me@test.ing PRIVMSG #Test :This is a test" 1`] = `
Object {
  "command": "PRIVMSG",
  "params": Array [
    "#Test",
    "This is a test",
  ],
  "prefix": Object {
    "host": "test.ing",
    "name": "test",
    "user": "me",
  },
}
`;

exports[`parse should parse "@" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=super;single     :test!me@test.ing    FOO   bar    baz   quux   :This is a test" 1`] = `
Object {
  "command": "FOO",
  "params": Array [
    "bar",
    "baz",
    "quux",
    "This is a test",
  ],
  "prefix": Object {
    "host": "test.ing",
    "name": "test",
    "user": "me",
  },
  "tags": Object {
    "single": true,
    "test": "super",
  },
}
`;

exports[`parse should parse "@test=super;single :  This is a test" 1`] = `
Object {
  "command": "This",
  "params": Array [
    "is",
    "a",
    "test",
  ],
  "tags": Object {
    "single": true,
    "test": "super",
  },
}
`;

exports[`parse should parse "@test=super;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=super;single :test!me@test.ing FOO bar baz quux :This is a test" 1`] = `
Object {
  "command": "FOO",
  "params": Array [
    "bar",
    "baz",
    "quux",
    "This is a test",
  ],
  "prefix": Object {
    "host": "test.ing",
    "name": "test",
    "user": "me",
  },
  "tags": Object {
    "single": true,
    "test": "super",
  },
}
`;

exports[`parse should parse "@test=super\\r\\n\\\\\\:\\shyper\\;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=super\\shyper;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "FOO    bar      baz   quux" 1`] = `
Object {
  "command": "FOO",
  "params": Array [
    "bar",
    "baz",
    "quux",
  ],
}
`;

exports[`parse should parse "FOO bar baz quux :This is a test" 1`] = `
Object {
  "command": "FOO",
  "params": Array [
    "bar",
    "baz",
    "quux",
    "This is a test",
  ],
}
`;

exports[`parse should parse "FOO bar baz quux" 1`] = `
Object {
  "command": "FOO",
  "params": Array [
    "bar",
    "baz",
    "quux",
  ],
}
`;

exports[`parse should parse "FOO" 1`] = `
Object {
  "command": "FOO",
  "params": Array [],
}
`;

exports[`parse should parse "PRIVMSG #Test :This is a test" 1`] = `
Object {
  "command": "PRIVMSG",
  "params": Array [
    "#Test",
    "This is a test",
  ],
}
`;
